src/test/DuplicateNames2/DuplicateNames2.expected
error: DuplicateNames2.panda:2:9: 'a' was already defined at DuplicateNames2.panda:1:13
error: DuplicateNames2.panda:4:13: 'a' was already defined at DuplicateNames2.panda:1:13
error: DuplicateNames2.panda:6:22: 'a' was already defined at DuplicateNames2.panda:1:13
3 errors
