src/test/DuplicateNames2/DuplicateNames2.panda
method test(a:Int) {
    var a := 10
    if true {
        def a := 10
        loop {
            constant a := 10
        }
    }
}